[gd_scene load_steps=4 format=3 uid="uid://cyivbucvdahoh"]

[ext_resource type="Script" path="res://screens/lobby_screen/lobby.gd" id="1_arrm1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qnrap"]
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_right = 20.0
content_margin_bottom = 20.0
bg_color = Color(0.172549, 0.184314, 0.180392, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kqhd2"]
bg_color = Color(0.45098, 0.45098, 0.45098, 1)

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_arrm1")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qnrap")

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
alignment = 1

[node name="PlayerList" type="VBoxContainer" parent="CenterContainer/VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2

[node name="Player1Label" type="Label" parent="CenterContainer/VBoxContainer/PanelContainer/HBoxContainer/PlayerList"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 24)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_kqhd2")
horizontal_alignment = 1

[node name="Player2Label" type="Label" parent="CenterContainer/VBoxContainer/PanelContainer/HBoxContainer/PlayerList"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 24)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_kqhd2")
horizontal_alignment = 1

[node name="Player3Label" type="Label" parent="CenterContainer/VBoxContainer/PanelContainer/HBoxContainer/PlayerList"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 24)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_kqhd2")
horizontal_alignment = 1

[node name="Player4Label" type="Label" parent="CenterContainer/VBoxContainer/PanelContainer/HBoxContainer/PlayerList"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 24)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_kqhd2")
horizontal_alignment = 1

[node name="Player5Label" type="Label" parent="CenterContainer/VBoxContainer/PanelContainer/HBoxContainer/PlayerList"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 24)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_kqhd2")
horizontal_alignment = 1

[node name="Player6Label" type="Label" parent="CenterContainer/VBoxContainer/PanelContainer/HBoxContainer/PlayerList"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 24)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_kqhd2")
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2

[node name="Player1ReadyBox" type="CheckBox" parent="CenterContainer/VBoxContainer/PanelContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
disabled = true

[node name="Player2ReadyBox" type="CheckBox" parent="CenterContainer/VBoxContainer/PanelContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
disabled = true

[node name="Player3ReadyBox" type="CheckBox" parent="CenterContainer/VBoxContainer/PanelContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
disabled = true

[node name="Player4ReadyBox" type="CheckBox" parent="CenterContainer/VBoxContainer/PanelContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
disabled = true

[node name="Player5ReadyBox" type="CheckBox" parent="CenterContainer/VBoxContainer/PanelContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
disabled = true

[node name="Player6ReadyBox" type="CheckBox" parent="CenterContainer/VBoxContainer/PanelContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
disabled = true

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ReadyButton" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Ready"

[node name="StartButton" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Start"

[node name="ReadyWarningLabel" type="Label" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.827451, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 6
text = "All players must be ready to start"
horizontal_alignment = 1
autowrap_mode = 2

[node name="LoadingScreen" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="LoadingScreen"]
layout_mode = 2

[node name="LoadingLabel" type="Label" parent="LoadingScreen/CenterContainer"]
layout_mode = 2
text = "LOADING..."
